# ebus-app

./: .gitignore  README.md  package-lock.json  package.json  server.js
.devcontainer/: Dockerfile  devcontainer.json
ebus-backend/: main.py  pyproject.toml
ebus-frontend/: package-lock.json  package.json
ebus-frontend/src/: App.jsx
public/: index.html  script.js  styles.css
