[project]
name = "ebus-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Jorim Tielemans",email = "tielemans.jorim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
